# pypus

./: .gitignore  404.html  index.html  migrate.sh  mkdocs.yml  pyproject.toml  search.html
about/: index.html
docs/: about.md  example.md  index.md
example/: index.html
search/: search_index.json
