[project]
name = "pypus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
]

[project.scripts]
pypus = 'pypus.cli:main'

[tool.uv]
package = true
